# immo-eliza-ml

./: .dockerignore  DEPLOYMENT.md  DOCKER.md  Dockerfile.api  Dockerfile.streamlit  JSON_PARAMS_GUIDE.md  README.md  api.py  api_usage_example.py  app.py  docker-compose.yml  model.pkl  pyproject.toml  requirements.txt  test_json_params.py
data/2_cleaned/: cleaned_data.csv
data/3_processed/: y_values.json  y_values.pkl
models/: decision_tree.pkl  decision_tree_params.json  detailed_performance_report.json  linear_regression.pkl  linear_regression_params.json  preprocessor.json  preprocessor.pkl  random_forest_params.json  results.csv  svr.pkl  svr_params.json  xgboost.pkl  xgboost_params.json
notebooks/: 1_exploration_and_cleaning.ipynb  2_preprocessing.ipynb  99_draft_preprocessing.ipynb
predictions/: all_predictions.csv  decision_tree.pkl  linear_regression.pkl  random_forest.pkl  svr.json  svr.pkl  xgboost.pkl
src/immo_eliza_ml/: __init__.py  clean.py  config.py  main.py  predict.py  preprocessing.py  trainer.py  visuals.py
test_models/: random_forest_params.json  xgboost_params.json
