[project]
name = "immo-eliza-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "Michiel Rondelez",email = "michiel.rondelez.pro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "xgboost (>=3.1.2,<4.0.0)",
    "category-encoders (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
